<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="FB_TPD_CANopen" Id="{aba12aa0-774e-4307-bc34-d6e83193ae31}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_TPD_CANopen
VAR_INPUT
	Node_address:STRING; (*CANopen node address of DCV*)
	Enable:BOOL;
	Start:BOOL;
	Reset:BOOL;
	Torque_control:BOOL;
	Speed_ref:REAL; (*Speed ref in m/s (with drive ramp)*)
	Torque_ref:REAL; (*Torque ref  in Amps for DC or as a percent of full load current for AC*)
	Nominal_speed:REAL; (*Speed in m/s at rated motor rpm*)
	Current_limit_P:REAL;
	Current_limit_N:REAL;
	Speed_P:REAL;
	Speed_I:REAL;
	Write_config:BOOL;
	Check_config:BOOL;
	Base_settings:dut_TPD32_base_settings;
	Status_word:REAL; (*DCV status word - adheres to DRIVECOM standard - same as ATV71*)
	PDO_TX1:REAL; (*DCV transmit PDO 1*)
	PDO_TX2:REAL; (*DCV transmit PDO 2*)
	PDO_TX3:REAL; (*DCV transmit PDO 3*)
END_VAR
VAR_OUTPUT
	Running:BOOL; (*Drive enabled and operational - from Control Word*)
	Fault:BOOL; (*Drive is reporting a malfunction*)
	hmi_Motor_speed:dut_hmi_Analogue; (*Motor speed in rpm*)
	hmi_Amature_current:dut_hmi_Analogue; (*Armature current as % of full load current*)
	hmi_Field_current:dut_hmi_Analogue; (*Field current as % of nominal field current*)
	hmi_Amature_voltage:dut_hmi_Analogue; (*Armature voltage in volts*)
	Mains_failure:BOOL;
	Field_failure:BOOL;
	Configuring:BOOL;
	Config_mismatch:BOOL;
	Virt_dig_in:REAL; (*DCV virtual digital inputs*)
	PDO_RX1:REAL; (*DCV receive PDO 1*)
	PDO_RX2:REAL; (*DCV receive PDO 2*)
	PDO_RX3:REAL; (*DCV receive PDO 3*)
END_VAR
VAR
	GEST1:ARRAY[1..4]OF REAL;
	Node_addm:ARRAY[0..8]OF REAL;
	Topo_address:STRING;
	Flux_current_array:ARRAY[1..2]OF REAL;
	i:REAL;
	Motor_speed:REAL;
	Amature_current:REAL;
	Amature_voltage:REAL;
	Field_current:REAL;
END_VAR
{warning "TODO: Var 'Status_word' was set as an INT in the original program. I have set it as a REAL as per our current structure, but should this not be a word?"}
{warning "TODO: This function block needs to be reworked to work on our new comms"}]]></Declaration>
    <Implementation>
      <ST><![CDATA[M_DCV_PDO();
M_DCV_config();
M_Settings();
M_DCV_analogues();]]></ST>
    </Implementation>
    <Method Name="M_DCV_PDO" Id="{42f5b0e0-bb4d-4e0c-88e4-1f41f55fe8f5}">
      <Declaration><![CDATA[METHOD M_DCV_PDO
VAR_INPUT
END_VAR
{warning "TODO: these comms need to be recreated as EtherCat comms I assume? The ADDM FB doesn't exist here."}]]></Declaration>
      <Implementation>
        <CFC>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="CFCImplementationObject">
                <o n="Items" t="CFCItemList">
                  <l2 n="InnerList">
                    <o t="CFCOutputElement">
                      <o n="Input" t="CFCInputPinWithSetReset">
                        <v n="Bounds">"0, 0, 0, 0"</v>
                        <n n="ElementGroupId" />
                        <v n="ProcessValue">""</v>
                        <v n="Access" t="ProcessValueAccess">None</v>
                        <v n="Negated">false</v>
                        <v n="SetReset" t="SetReset">None</v>
                        <v n="SetResetRef" t="SetResetRef">None</v>
                        <v n="PretendsToBeConnected">false</v>
                        <v n="Id">31L</v>
                      </o>
                      <o n="Text" t="CFCText">
                        <v n="Bounds">"0, 0, 0, 0"</v>
                        <n n="ElementGroupId" />
                        <v n="Text">"Topo_address"</v>
                        <v n="Modifiable">true</v>
                        <v n="Id">32L</v>
                      </o>
                      <v n="PageArea">4</v>
                      <v n="Bounds">"20, 6, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="OwningPageId">-1L</v>
                      <v n="Id">30L</v>
                    </o>
                    <o t="CFCInputElement">
                      <o n="Output" t="CFCOutputPin">
                        <v n="Bounds">"0, 0, 0, 0"</v>
                        <n n="ElementGroupId" />
                        <v n="Negated">false</v>
                        <v n="SetReset" t="SetReset">None</v>
                        <v n="SetResetRef" t="SetResetRef">None</v>
                        <v n="PretendsToBeConnected">false</v>
                        <v n="Id">26L</v>
                      </o>
                      <o n="Text" t="CFCText">
                        <v n="Bounds">"0, 0, 0, 0"</v>
                        <n n="ElementGroupId" />
                        <v n="Text">"Node_address"</v>
                        <v n="Modifiable">true</v>
                        <v n="Id">27L</v>
                      </o>
                      <v n="PageArea">3</v>
                      <v n="Bounds">"2, 7, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="OwningPageId">-1L</v>
                      <v n="Id">25L</v>
                    </o>
                    <o t="CFCCommentElement">
                      <o n="Text" t="CFCText">
                        <v n="Bounds">"0, 0, 0, 0"</v>
                        <n n="ElementGroupId" />
                        <v n="Text">"Convert Node address to topological address for SDO reads/writes"</v>
                        <v n="Modifiable">true</v>
                        <v n="Id">6L</v>
                      </o>
                      <v n="PageArea">0</v>
                      <v n="Bounds">"2, 2, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="OwningPageId">-1L</v>
                      <v n="Id">5L</v>
                    </o>
                    <o t="CFCBoxElement">
                      <o n="Inputs" t="CFCItemList">
                        <l2 n="InnerList" cet="CFCInputPin">
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="IsExtensiblePin">false</v>
                            <v n="ProcessValue">""</v>
                            <v n="Access" t="ProcessValueAccess">None</v>
                            <v n="Negated">false</v>
                            <v n="SetReset" t="SetReset">None</v>
                            <v n="SetResetRef" t="SetResetRef">None</v>
                            <v n="PretendsToBeConnected">false</v>
                            <v n="Id">16L</v>
                          </o>
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="IsExtensiblePin">false</v>
                            <v n="ProcessValue">""</v>
                            <v n="Access" t="ProcessValueAccess">None</v>
                            <v n="Negated">false</v>
                            <v n="SetReset" t="SetReset">None</v>
                            <v n="SetResetRef" t="SetResetRef">None</v>
                            <v n="PretendsToBeConnected">false</v>
                            <v n="Id">18L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Outputs" t="CFCItemList">
                        <l2 n="InnerList" cet="CFCOutputPin">
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="Negated">false</v>
                            <v n="SetReset" t="SetReset">None</v>
                            <v n="SetResetRef" t="SetResetRef">None</v>
                            <v n="PretendsToBeConnected">false</v>
                            <v n="Id">20L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Texts" t="CFCItemList">
                        <l2 n="InnerList" cet="CFCText">
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="Text">"STR1"</v>
                            <v n="Modifiable">true</v>
                            <v n="Id">17L</v>
                          </o>
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="Text">"STR2"</v>
                            <v n="Modifiable">true</v>
                            <v n="Id">19L</v>
                          </o>
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="Text">"CONCAT"</v>
                            <v n="Modifiable">true</v>
                            <v n="Id">21L</v>
                          </o>
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="Text">"CONCAT"</v>
                            <v n="Modifiable">true</v>
                            <v n="Id">14L</v>
                          </o>
                          <o>
                            <v n="Bounds">"0, 0, 0, 0"</v>
                            <n n="ElementGroupId" />
                            <v n="Text">""</v>
                            <v n="Modifiable">false</v>
                            <v n="Id">15L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Parameters" t="CFCItemList">
                        <l2 n="InnerList" />
                      </o>
                      <n n="PreparedParameters" />
                      <v n="PageArea">0</v>
                      <v n="Bounds">"10, 4, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="EnEno">false</v>
                      <v n="KindOfCall" t="KindOfCall">Function</v>
                      <v n="ContainsExtensibleInputs">false</v>
                      <v n="Forced">false</v>
                      <v n="OwningPageId">-1L</v>
                      <v n="Id">7L</v>
                    </o>
                    <o t="CFCInputElement">
                      <o n="Output" t="CFCOutputPin">
                        <v n="Bounds">"0, 0, 0, 0"</v>
                        <n n="ElementGroupId" />
                        <v n="Negated">false</v>
                        <v n="SetReset" t="SetReset">None</v>
                        <v n="SetResetRef" t="SetResetRef">None</v>
                        <v n="PretendsToBeConnected">false</v>
                        <v n="Id">23L</v>
                      </o>
                      <o n="Text" t="CFCText">
                        <v n="Bounds">"0, 0, 0, 0"</v>
                        <n n="ElementGroupId" />
                        <v n="Text">"'0.0.2'"</v>
                        <v n="Modifiable">true</v>
                        <v n="Id">24L</v>
                      </o>
                      <v n="PageArea">3</v>
                      <v n="Bounds">"2, 6, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="OwningPageId">-1L</v>
                      <v n="Id">22L</v>
                    </o>
                    <o t="CFCConnection">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="SourcePinId">26L</v>
                      <v n="DestPinId">18L</v>
                      <v n="Id">28L</v>
                    </o>
                    <o t="CFCConnection">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="SourcePinId">23L</v>
                      <v n="DestPinId">16L</v>
                      <v n="Id">29L</v>
                    </o>
                    <o t="CFCConnection">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="SourcePinId">20L</v>
                      <v n="DestPinId">31L</v>
                      <v n="Id">33L</v>
                    </o>
                  </l2>
                </o>
                <n n="ParameterInitializationMethodGenerator" />
                <o n="RoutingPathTable" t="CFCRoutingPathTable">
                  <d2 n="InnerDictionary" ckt="CFCRoutingConnection" cvt="CFCPointList">
                    <o>
                      <v n="ConnectionId">29L</v>
                      <o n="StartPoint" t="CFCPoint">
                        <v n="X">7</v>
                        <v n="Y">6</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                      <v n="Unroutable">false</v>
                      <n n="CorrespondingPageId" />
                      <v n="Locked">false</v>
                    </o>
                    <o>
                      <l2 n="InnerList" cet="CFCPoint">
                        <o>
                          <v n="X">7</v>
                          <v n="Y">6</v>
                          <v n="IsJoint">false</v>
                          <v n="Flags">68</v>
                        </o>
                        <o>
                          <v n="X">9</v>
                          <v n="Y">6</v>
                          <v n="IsJoint">false</v>
                          <v n="Flags">97</v>
                        </o>
                      </l2>
                    </o>
                    <o>
                      <v n="ConnectionId">33L</v>
                      <o n="StartPoint" t="CFCPoint">
                        <v n="X">19</v>
                        <v n="Y">6</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                      <v n="Unroutable">true</v>
                      <n n="CorrespondingPageId" />
                      <v n="Locked">false</v>
                    </o>
                    <o>
                      <l2 n="InnerList" cet="CFCPoint">
                        <o>
                          <v n="X">19</v>
                          <v n="Y">6</v>
                          <v n="IsJoint">false</v>
                          <v n="Flags">0</v>
                        </o>
                      </l2>
                    </o>
                    <o>
                      <v n="ConnectionId">28L</v>
                      <o n="StartPoint" t="CFCPoint">
                        <v n="X">9</v>
                        <v n="Y">7</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                      <v n="Unroutable">true</v>
                      <n n="CorrespondingPageId" />
                      <v n="Locked">false</v>
                    </o>
                    <o>
                      <l2 n="InnerList" cet="CFCPoint">
                        <o>
                          <v n="X">9</v>
                          <v n="Y">7</v>
                          <v n="IsJoint">false</v>
                          <v n="Flags">0</v>
                        </o>
                      </l2>
                    </o>
                  </d2>
                </o>
                <v n="AutoSizeCanvas">true</v>
                <v n="CanvasWidth">29</v>
                <v n="CanvasHeight">10</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="CFCBoxElement">{f5becf35-b1f3-4274-b411-81d4b63a1516}</Type>
              <Type n="CFCCommentElement">{3487d131-7fd4-48ac-9e99-9e275c3b8ff8}</Type>
              <Type n="CFCConnection">{5ae2e111-ecff-4a21-b647-2d4da63f8db7}</Type>
              <Type n="CFCImplementationObject">{32d3375e-c010-41e2-9e43-b2fbf4f2b374}</Type>
              <Type n="CFCInputElement">{d51129f5-df27-4886-99d1-c564d2e2c1f6}</Type>
              <Type n="CFCInputPin">{c994f6e0-311a-4a1c-bc38-75fe34892406}</Type>
              <Type n="CFCInputPinWithSetReset">{5c3476a8-05c5-430e-861c-9cfa51d68ca8}</Type>
              <Type n="CFCItemList">{cd57ba20-558b-4b98-96c1-73c6000c3087}</Type>
              <Type n="CFCOutputElement">{8d9e2b78-3efe-4fe4-8160-f3a7381ddd8f}</Type>
              <Type n="CFCOutputPin">{65582d84-cf18-4ca0-be59-bf5a3d00b8f8}</Type>
              <Type n="CFCPoint">{b3e42b54-b8f2-45d3-825d-747f82f244a0}</Type>
              <Type n="CFCPointList">{584effbc-813e-443a-bf78-ad9c8d49db41}</Type>
              <Type n="CFCRoutingConnection">{93c117eb-0884-403b-b01e-28b89f47e041}</Type>
              <Type n="CFCRoutingPathTable">{4b8bcc79-5980-4868-b49e-005a8148859b}</Type>
              <Type n="CFCText">{72f2b13f-5349-4a8a-bbe6-2bccf3f42179}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="KindOfCall">{77f43dfe-ca6a-4869-828f-7609d8ed6ea6}</Type>
              <Type n="ProcessValueAccess">{88453c7d-d652-4a27-a1b0-a1953be49a5c}</Type>
              <Type n="SetReset">{24449d48-c96a-49c4-b9d1-a4ea34aedce3}</Type>
              <Type n="SetResetRef">{233bc97c-69fe-4d29-b40e-a9a9b854044e}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </CFC>
      </Implementation>
    </Method>
    <LineIds Name="FB_TPD_CANopen">
      <LineId Id="9" Count="0" />
      <LineId Id="64" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>